name:                yassh
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/yassh#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Fernando Rincon Martin
maintainer:          frm.rincon@gmail.com
copyright:           2017 Fernando Rincon Martin
category:            network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Yassh
                     , Network.Yassh.IOStreams
                     , Network.Yassh.KeyExchange
                     , Network.Yassh.Internal
                     , Network.Yassh.Internal.ProtocolVersionExchange
  other-modules:       Paths_yassh
                     , Network.Yassh.Internal.KeyExchange 
                     , Network.Yassh.Internal.KeyExchange.DiffieHellman
  build-depends:       base >= 4.7 && < 5
                     , network
                     , network-simple
                     , bytestring
                     , text
                     , placeholders
                     , attoparsec
                     , io-streams
                     , word8
                     , binary
                     , cryptonite
                     , free
                     , async
                     , mtl
                     , exceptions
                     , timespan
                     , cryptonite
                     , memory
  default-language:    Haskell2010

executable yassh-server
  hs-source-dirs:      server
  main-is:             MainServer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yassh
                     , io-streams
                     , bytestring
  default-language:    Haskell2010

executable yassh-client
  hs-source-dirs:      client
  main-is:             MainClient.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yassh
                     , placeholders
                     , mtl
  default-language:    Haskell2010

test-suite yassh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yassh
                     , attoparsec
                     , io-streams
                     , bytestring
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/frincon/yassh
